# mdfileconvert

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
mdfileconvert/: converter.py  requirements.txt
mdfileconvert.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
