[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdfileconvert"
version = "2.0.2"
authors = [
  { name = "Leandro Rivera Ríos", email = "leo.232rivera@gmail.com" },
]
description = "Convierte archivos a formato Markdown extrayendo texto, tablas e imágenes."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["markdown", "pdf", "conversion", "docx", "pptx"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "pdfplumber",             
  "pillow",                
  "python-docx",           
  "pandas",                
  "openpyxl",              
  "python-pptx",           
  "lxml",     
  "tabulate",
  "numpy",
  "python-dateutil",              
]

[project.urls]
"Homepage" = "https://github.com/LeoR22/mdfileconvert"
"Repository" = "https://github.com/LeoR22/mdfileconvert"
